tools/flowc/tests/errors/error37.flow
import runtime;
X : (a : Maybe<int>);
Y : (a : int);
main() {
	x : X = X(Some(1));
	y : Y = Y(1);
	println(x.a == y.a); // this compiles
	println(y.a == x.a); // this shows an error
}
